# CRayTracer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  RayTracer.c  Viewport.h  main.c  pyvenv.cfg  vectors.csv  windows_display.c
include/: windows_display.h
lib/: Color16.h  Color32.h  Colors.c  Colors.h  Fix.c  Fix.h  Ray.h  RayRenderer.c  RayRenderer.h  Vec3.c  Vec3.h
scripts/: plot_vectors.py
src/: CMakeLists.txt  Color32.h  Fix.h  Ray.h  RayRenderer.c  RayRenderer.h  Vec3.c  main.c  ray.c  windows_display.c
test/: compile_commands.txt  demo.c  fix_test.c  fixtest  results.txt  test  vec3_test.c  vectest
tools/: generate_vectors  generate_vectors.c
